[feat] - add notificationAARForEMAIL api
